# beautiful

./: .env  .flake8  .gitignore  .~lock.dev.docx#  AGENTS.md  CLAUDE.md  Makefile  README.md  api-sample  api.error  cleaner.py  debug_chapter_detection.py  debug_docx_content.py  debug_full_workflow.py  debug_text_distribution.py  formatting_fixes.py  formatting_rules.md  implementation-plan.md  implementation.md  impro.md  improved_docx_converter.py  mammoth-style-map.map  pyproject.toml  smart-cleaner.py  test_actual_file_splitting.py  test_chapter_splitting.py  test_comprehensive_formatting.py  test_content_distribution.py  test_converter.py  test_converter_integration.py  test_docx_headers.py  test_final_integration.py  test_formatting_rules.py  test_simple_file_splitting.py  todo.md
chapters/: 1.common.md  2.architecture.md  3.technical-requirements.md  4.installation-setup.md  5.system-setup.md  6.monitoring.md  7.winter-cms.md
docx/: __init__.py
output_dir/html/: chapter_1.html
src/doc2md/: cli.py  config.py  heading_numbering.py  llm_client.py  preprocess.py  prompt_builder.py  schema.py
tests/: __init__.py  test_cli.py  test_llm_client.py  test_preprocess.py  test_schema.py  test_splitter.py
tests/integration/: test_chapter2_formatting.py  test_docx_processing.py
tests/unit/: test_app_annotation_removal.py  test_chapter_splitting.py  test_code_block_formatting.py  test_converter_core.py  test_formatting_fixes_tdd.py  test_formatting_rules.py  test_heading_numbering.py  test_paragraph_block_conversion.py  (+4 more)
todos/: todos.md  todos.txt
